Finished redoing Lesson to Quest and change back end to make it easier to link questions

--- a/src/components/QuestNav/QuestNav.scss
+++ b/src/components/QuestNav/QuestNav.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.lesson-nav {
+.quest-nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
