--- a/src/components/QuestQuestions/QuestQuestions.scss
+++ b/src/components/QuestQuestions/QuestQuestions.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.lesson-question {
+.quest-question {
   display: flex;
   flex-direction: column;
   gap: 20px;
