--- a/src/pages/QuestPage/QuestPage.scss
+++ b/src/pages/QuestPage/QuestPage.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.lesson {
+.quest {
   @include Desktop {
     display: flex;
     width: 100%;
