--- a/src/components/addFriends/addFriends.scss
+++ b/src/components/addFriends/addFriends.scss
@@ -13,14 +13,13 @@
     align-items: center;
     border: 3px solid $Green;
     border-radius: 10px;
-    height: 50px;
+    height: 80px;
     background-color: transparent;
     padding: 0 10px;
-    width: 200px;
+    width: 65%;
     justify-content: center;
 
-    @include Sub-Title;
-    text-transform: uppercase;
+    @include Body;
 
     @include Tablet {
       width: 100%;
@@ -33,8 +32,8 @@
     background-color: transparent;
     border: 3px solid $Green;
     border-radius: 10px;
-    height: 50px;
-    width: 50px;
+    height: 80px;
+    width: 80px;
 
     @include Tablet {
       height: 80px;
@@ -43,8 +42,8 @@
   }
 
   &__img {
-    height: 20px;
-    width: 20px;
+    height: 40px;
+    width: 40px;
 
     @include Tablet {
       height: 35px;
