--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -10,6 +10,8 @@
   border-radius: 10px;
   height: 50px;
   border: none;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   @include Body;
 
   @include Tablet {
