--- a/src/components/overview/overview.scss
+++ b/src/components/overview/overview.scss
@@ -15,15 +15,11 @@
     border: 3px solid $Green;
     border-radius: 10px;
     width: 100%;
-    height: 50px;
+    height: 80px;
     display: flex;
-
-    @include Tablet {
-      height: 80px;
-      align-items: center;
-      padding: 10px;
-      gap: 10px;
-    }
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 
     &-top {
       width: 100%;
@@ -55,8 +51,6 @@
   }
 
   &__img {
-    @include Tablet {
-      height: 50px;
-    }
+    height: 50px;
   }
 }
