--- a/src/pages/DashboardPage/DashboardPage.scss
+++ b/src/pages/DashboardPage/DashboardPage.scss
@@ -13,13 +13,13 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    overflow-y: scroll;
     min-height: 100dvh;
-    padding: 30px 20px 110px 20px;
+    padding: 20px 20px 110px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    overflow-y: scroll;
   }
 
   &__top {
@@ -148,7 +148,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 0 20px;
+    // padding: 0 20px;
   }
 
   &__course {
