--- a/src/pages/SignInPage/SignInPage.scss
+++ b/src/pages/SignInPage/SignInPage.scss
@@ -110,7 +110,7 @@
   }
 
   &__link {
-    @include Body;
+    @include Links;
     color: $Pink;
     margin-bottom: 20px;
 
@@ -122,7 +122,7 @@
     }
 
     &-text {
-      @include Body;
+      @include Links;
     }
   }
 }
