--- a/src/pages/LogInPage/LogInPage.scss
+++ b/src/pages/LogInPage/LogInPage.scss
@@ -2,7 +2,7 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.signin-page {
+.login-page {
   background-image: url("../../assets/background/SignUpMobile.svg");
   background-repeat: no-repeat;
   background-size: cover;
