--- a/src/components/QuestNav/QuestNav.scss
+++ b/src/components/QuestNav/QuestNav.scss
@@ -25,6 +25,12 @@
     border-radius: 20px;
     overflow: hidden;
 
+    &-inside--0 {
+      width: 0%;
+      height: 100%;
+      background-color: $Pink;
+    }
+
     &-inside--25 {
       width: 25%;
       height: 100%;
