--- a/src/pages/QuestPage/QuestPage.scss
+++ b/src/pages/QuestPage/QuestPage.scss
@@ -19,6 +19,6 @@
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    overflow-y: scroll;
+    // overflow-y: scroll;
   }
 }
