--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -43,11 +43,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
+      rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+      rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    border-radius: 100%;
 
     @include Desktop-L {
       gap: 20px;
       width: 100%;
       justify-content: flex-start;
+      box-shadow: unset;
     }
   }
 
