Created a landing page finished styling mobile portion links are up and working

--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -20,6 +20,11 @@
     max-width: 368px;
   }
 
+  &-white {
+    background-color: $White;
+    color: $Pink;
+  }
+
   &-green {
     background-color: transparent;
     border: 3px solid $Green;
