--- a/src/styles/partials/_typography.scss
+++ b/src/styles/partials/_typography.scss
@@ -11,7 +11,7 @@
 }
 
 @font-face {
-  font-family: "Laconic";
-  src: url(../../assets/fonts/Laconic_Bold.otf) format("truetype");
+  font-family: "Poppins";
+  src: url(../../assets/fonts/Poppins-Bold.ttf) format("truetype");
   font-weight: 600;
 }
