--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -4,6 +4,7 @@ $Green: #21ef80;
 $Purple: #201147;
 $Dark-Purple: #15124e;
 $Light-Purple: #343178;
+$White: #fff;
 
 //secondary colors
 $Lightest-purple: #423e90;
