--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -9,8 +9,6 @@
     rgba(84, 37, 131, 1) 100%
   );
   width: 100%;
-  height: 100dvh;
-  padding: 20px;
 
   display: flex;
   flex-direction: column;
@@ -18,14 +16,122 @@
   justify-content: center;
   gap: 20px;
 
+  &__header {
+    --min-height: 100svh;
+    display: flex;
+    flex-direction: column;
+    min-height: var(--min-height);
+    overflow: hidden;
+    padding-top: 70px;
+    width: 100%;
+  }
+
+  &__nav {
+    height: 70px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 15px;
+
+    @include Desktop {
+      width: 100%;
+      max-width: 988px;
+      margin: 0 auto;
+      justify-content: flex-start;
+    }
+
+    &-container {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 2;
+    }
+  }
+
+  &__container {
+    &--bottom {
+      display: flex;
+      flex-direction: column;
+      flex-grow: 1;
+      gap: 20px;
+      width: 100%;
+      padding: 10px 20px 20px;
+
+      @include Desktop {
+        flex-direction: row;
+        padding: 50px 0;
+        gap: 80px;
+        align-items: center;
+        width: 988px;
+        margin: 0 auto;
+      }
+    }
+
+    &--left {
+      align-items: end;
+      display: flex;
+      flex: 1;
+      justify-content: center;
+
+      @include Desktop {
+        gap: 20px;
+        width: 50%;
+      }
+    }
+
+    &--right {
+      align-items: center;
+      display: flex;
+      flex: 1;
+      flex-direction: column;
+      gap: 20px;
+    }
+  }
+
   &__subtitle {
     @include Sub-Title;
     text-align: center;
+    flex: 1;
+    margin: 10px 0 0;
+    max-width: 345px;
+    overflow-wrap: anywhere;
+
+    @include Tablet {
+      flex: 0;
+      max-width: 480px;
+    }
   }
 
   &__link {
     width: 100%;
     display: flex;
     justify-content: center;
+  }
+
+  &__links {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  &__logo {
+    height: 90%;
+    max-height: 70px;
+
+    &--hero {
+      aspect-ratio: 1 / 1;
+      line-height: 0;
+      max-width: 250px;
+      width: 100%;
+
+      @include Tablet {
+        width: 100%;
+        height: 100%;
+        max-width: 430px;
+      }
+    }
   }
 }
