--- a/src/pages/signupPage/signupPage.scss
+++ b/src/pages/signupPage/signupPage.scss
@@ -2,132 +2,53 @@
 @use "../../styles/partials/typography" as *;
 @use "../../styles/partials/variables" as *;
 
-.signup-page {
-  background-image: url("../../assets/background/SignUpMobile.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  min-height: 100dvh;
-  padding: 40px 20px;
-
+.signup-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 20px;
+  background: linear-gradient(
+    180deg,
+    rgba(8, 6, 45, 1) 0%,
+    rgba(84, 37, 131, 1) 100%
+  );
+  width: 100%;
+  height: 100dvh;
+  padding: 20px;
 
-  justify-content: center;
+  &__button {
+    width: 30px;
+    height: auto;
+    border: none;
+    background-color: transparent;
+    position: absolute;
+    top: 10px;
+    left: 10px;
 
-  @include Tablet {
-    gap: 40px;
-    background-image: url("../../assets/background/SignUpTablet.svg");
-  }
-
-  @include Desktop {
-    background-image: url("../../assets/background/SignUpDesktop.svg");
-
-    flex-direction: row;
-    padding: 60px 40px;
-    justify-content: center;
-    gap: 60px;
-  }
-
-  &__left-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-
-    @include Tablet {
-      gap: 20px;
-    }
-
-    @include Desktop {
-      align-items: flex-start;
-      width: 43%;
-      gap: 40px;
-      max-width: 420px;
-      height: 590px;
-    }
-  }
-  &__logo {
-    width: 100%;
-
-    @include Desktop {
-      width: 80%;
+    &-img {
+      width: 100%;
     }
   }
 
-  &__subtitle {
-    @include Sub-Title;
-    color: white;
+  &__title {
+    @include Title;
     text-align: center;
-
-    @include Desktop {
-      text-align: left;
-    }
-  }
-
-  &__text {
-    display: none;
-    @include Body;
-
-    @include Desktop {
-      display: block;
-    }
-  }
-
-  &__learn-button {
-    display: none;
-
-    @include Desktop {
-      display: block;
-    }
-  }
-
-  &__form-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-    max-width: 350px;
-
-    @include Tablet {
-      max-width: 368px;
-    }
-
-    @include Desktop {
-      width: 43%;
-      max-width: 420px;
-      height: 590px;
-      padding: 20px;
-      background-color: $Purple;
-      border-radius: 25px;
-      border: white 3px solid;
-    }
   }
 
   &__form {
-    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    width: 100%;
+    max-width: 375px;
   }
-
   &__link {
-    @include Links;
-    color: $Pink;
-    margin-bottom: 20px;
+    @include Label;
 
-    &-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-    }
-
-    &-text {
-      @include Links;
+    &--pink {
+      color: $Pink;
     }
   }
 }
