--- a/src/pages/TermsConditionsPage/TermsConditionsPage.scss
+++ b/src/pages/TermsConditionsPage/TermsConditionsPage.scss
@@ -6,7 +6,7 @@
   background-image: url("../../assets/background/GamingMobile.svg");
   background-repeat: no-repeat;
   background-size: cover;
-  min-height: 100dvh;
+  // min-height: 100dvh;
   padding: 40px 20px;
 
   display: flex;
