--- a/src/styles/partials/_variables.scss
+++ b/src/styles/partials/_variables.scss
@@ -1,10 +1,14 @@
 //primary colors
-$Pink: #eb05a2;
-$Green: #21ef80;
+$Pink: #e91e63;
+$Green: #2ecc71;
 $Purple: #201147;
-$Dark-Purple: #15124e;
+// $Dark-Purple: #15124e;
 $Light-Purple: #343178;
 $White: #fff;
-
+$Dark-Purple: #15124e;
 //secondary colors
 $Lightest-purple: #423e90;
+
+// Colors
+$vibrant-purple: #9b59b6;
+$pastel-purple: #d7bde2;
