--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -29,21 +29,24 @@
   font-family: "Abaddon";
   font-size: 1rem;
   color: white;
+  line-height: 23px;
 }
 
-@mixin Sub-Title {
+@mixin Subtitle {
   font-family: "Poppins";
-  font-size: 1.625rem;
+  font-size: 32px;
   color: white;
+}
 
-  @include Tablet {
-    font-size: 1.875rem;
-  }
+@mixin Heading {
+  font-family: "Poppins";
+  font-size: 20px;
+  color: white;
 }
 
 @mixin Title {
   font-family: "Heavitas";
-  font-size: 1.5rem;
+  font-size: 2.25rem;
   line-height: 130%;
   color: white;
 
@@ -54,7 +57,7 @@
 
 @mixin Label {
   font-family: "Abaddon";
-  font-size: 1rem;
+  font-size: 0.9375rem;
   color: white;
 
   @include Tablet() {
