--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -20,32 +20,11 @@
     --min-height: 100svh;
     display: flex;
     flex-direction: column;
-    min-height: var(--min-height);
+    min-height: 100svh;
+
     overflow: hidden;
-    padding-top: 70px;
+    padding-top: 80px;
     width: 100%;
-  }
-
-  &__nav {
-    height: 70px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0 15px;
-
-    @include Desktop {
-      width: 100%;
-      max-width: 988px;
-      margin: 0 auto;
-      justify-content: flex-start;
-    }
-
-    &-container {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      z-index: 2;
-    }
   }
 
   &__container {
@@ -53,7 +32,6 @@
       display: flex;
       flex-direction: column;
       flex-grow: 1;
-      gap: 20px;
       width: 100%;
       padding: 10px 20px 20px;
 
@@ -84,12 +62,15 @@
       display: flex;
       flex: 1;
       flex-direction: column;
-      gap: 20px;
+
+      @include Desktop {
+        gap: 20px;
+      }
     }
   }
 
   &__subtitle {
-    @include Sub-Title;
+    @include Subtitle;
     text-align: center;
     flex: 1;
     margin: 10px 0 0;
@@ -109,18 +90,15 @@
   }
 
   &__links {
-    width: 100%;
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    align-items: center;
-    gap: 20px;
+    gap: 12px;
+    margin-top: 20px;
+    max-width: 330px;
+    width: 100%;
   }
 
   &__logo {
-    height: 90%;
-    max-height: 70px;
-
     &--hero {
       aspect-ratio: 1 / 1;
       line-height: 0;
@@ -131,6 +109,72 @@
         width: 100%;
         height: 100%;
         max-width: 430px;
+      }
+    }
+  }
+
+  &__main {
+    width: 100%;
+    padding: 0 0 100px 0;
+  }
+
+  &__about {
+    width: 100%;
+    padding: 100px 20px 0 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+
+    &-container {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+      max-width: 100%;
+
+      text-align: center;
+
+      @include Desktop {
+        flex-direction: row;
+        gap: 100px;
+        margin: 0 auto;
+        width: 988px;
+      }
+
+      &--alt {
+        @include Desktop {
+          flex-direction: row-reverse;
+        }
+      }
+
+      &-text {
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        max-width: 100%;
+      }
+
+      &-title {
+        @include Title;
+        color: $Green;
+        -webkit-text-stroke: 1px black;
+      }
+
+      &-description {
+        @include Body;
+        max-width: 330px;
+      }
+
+      &-image {
+        width: 100%;
+        max-width: 345px;
+        border-radius: 50%;
+
+        @include Desktop {
+          max-width: 500px;
+        }
       }
     }
   }
