--- a/src/components/settingPreferences/settingPreferences.scss
+++ b/src/components/settingPreferences/settingPreferences.scss
@@ -31,12 +31,12 @@
     }
   }
 
-  &__sub-title {
+  &__Subtitle {
     display: none;
 
     @include Desktop {
       display: block;
-      @include Sub-Title;
+      @include Subtitle;
     }
   }
 
