--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -29,7 +29,7 @@
   font-family: "Abaddon";
   font-size: 1rem;
   color: white;
-  line-height: 23px;
+  line-height: 130%;
 }
 
 @mixin Subtitle {
